@@ -3,6 +3,7 @@ MineSharp 0.1.4:
  - Support Minecraft Java 1.20.3 & 1.20.4
  - Load registry of the server
  - Parse chat message type from registry
+ - added WaitForTick() method to physics plugin
 
 MineSharp 0.1.3:
  - handle SpawnLivingEntity packet
